# DronePathfindingAI

./: .gitignore  3D_FEATURES_README.md  CHANGES_SUMMARY.md  CMakeLists.txt  PATHFINDING_README.md  README.md  SENSITIVITY_CONFIG.md  ai_bridge.py  debug_3d_detailed.cpp  drone_ai.py  interactive_3d_viewer.cpp  test_ai.py  test_world_render.cpp
include/: Camera.h  Drone.h  InputHandler.h  PythonAIIntegration.h  Renderer.h  Simulator.h  World.h
include/AI/: ObstacleAvoidance.h  PathPlanner.h  PathfindingAI.h
include/agent/: Agent.h  QLearningAgent.h  VisionAgent.h
include/bridge/: Environment.h
include/sim/: Drone.h  World.h
include/ui/: SimulatorUI.h
python_ai/: SETUP_GUIDE.md  drone_ai.py  integration_guide.md  requirements.txt  simple_ai_bridge.py  start_python_ai.py  test_debug.py  test_integration.py
python_ai/ai_data/: ai_input.json  drone_state.json  obstacles.json
shaders/: fragment.glsl
src/: 3d_demo.cpp  Camera.cpp  Drone.cpp  InputHandler.cpp  PythonAIIntegration.cpp  Renderer.cpp  Simulator.cpp  World.cpp  debug_episode_loop.cpp  debug_reset_sequence.cpp  main.cpp  test_pathfinding.cpp
src/AI/: ObstacleAvoidance.cpp  PathPlanner.cpp  PathfindingAI.cpp
src/agent/: Agent.cpp  FrameBuffer.cpp  QLearningAgent.cpp  VisionAgent.cpp
src/bridge/: Environment.cpp
src/sim/: Drone.cpp  World.cpp
src/ui/: SimulatorUI.cpp
take1/: README.md  STUCK_DETECTION_README.md  debug_3d_render.cpp  debug_simulator_ui.cpp  test_3d_renders.cpp
take1/include/: Simulator.h
take1/include/agent/: Agent.h  QLearningAgent.h  VisionAgent.h
take1/include/bridge/: Environment.h
take1/include/sim/: Drone.h  World.h
take1/src/: Simulator.cpp  debug_episode_bug.cpp  debug_setup.cpp  environment_test.cpp  episode_test.cpp  main.cpp  minimal_test.cpp  pathfinding_test.cpp  replicate_original.cpp  test_pathfinding.cpp
take1/src/agent/: FrameBuffer.cpp  QLearningAgent.cpp  VisionAgent.cpp
take1/src/sim/: Drone.cpp
take1/src/ui/: SimulatorUI.cpp
